Edit to list item capitalisations on first unordered list

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <img src="./HTML Practise Assets/FES.svg" alt="">
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#Discord">Discord</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="#discord">Discord</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <header>
