--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <header>
             <div>
-                <h1>Best place to learn fronten</h1>
+                <h1>Best place to learn frontend</h1>
                 <p>Go from being an absolute beginner to pro with a simplified process</p>
                 <button>Start now</button>
             </div>
