Fixed text area code in contact section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span>Email</span>
             <input type="email" placeholder="jane@example.com">
             <span>Message</span>
-            <textarea type="text" placeholder="Nice website, let's connect!">
+            <textarea type="text" placeholder="Nice website, let's connect!"></textarea>
         </form>
     </main>
 
