Made some code style changes

--- a/index.html
+++ b/index.html
@@ -32,12 +32,8 @@
         <section id="about">
             <h2>About</h2>
             <div>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur sint voluptatum placeat fugiat, praesentium, est aperiam quasi omnis nihil, culpa dolores similique porro voluptate dolorum assumenda. Nisi inventore explicabo esse.
-                </p>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur sint voluptatum placeat fugiat, praesentium, est aperiam quasi omnis nihil, culpa dolores similique porro voluptate dolorum assumenda. Nisi inventore explicabo esse.
-                </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur sint voluptatum placeat fugiat, praesentium, est aperiam quasi omnis nihil, culpa dolores similique porro voluptate dolorum assumenda. Nisi inventore explicabo esse.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur sint voluptatum placeat fugiat, praesentium, est aperiam quasi omnis nihil, culpa dolores similique porro voluptate dolorum assumenda. Nisi inventore explicabo esse.</p>
             </div>
             <figure>
                 <img src="./HTML Practise Assets/about.jpg" alt="">
